<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">コンテンツリーダー</string>
    <string name="version" translatable="false">1.2</string>
    <string name="no_media_warning" translatable="false">Storage Media not present</string>
    <string name="no_media_hint" translatable="false">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="open_failed" translatable="false">Unable to open document</string>
    <string name="content_failure" translatable="false">%1$s: %2$s</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="search_backwards" translatable="false">前を検索</string>
    <string name="search_forwards" translatable="false">次を検索s</string>
    <string name="search_document" translatable="false">検索</string>
    <string name="picker_title" translatable="false">%1$s %2$s: %3$s</string>
    <string name="outline_title" translatable="false">Table of Contents</string>
    <string name="enter_password" translatable="false">Enter Password</string>
    <string name="text_not_found" translatable="false">Text not found</string>
    <string name="searching_" translatable="false">Searching...</string>
    <string name="link_control" translatable="false">Link highlighting and enabling</string>
    <string name="no_further_occurences_found" translatable="false">No further occurrences found</string>
    <string name="select" translatable="false">Select</string>
    <string name="search" translatable="false">検索</string>
    <string name="copy" translatable="false">Copy</string>
    <string name="strike_out" translatable="false">Strike out</string>
    <string name="top_text" translatable="false">読みたいコンテンツのアプリから起動して下さい。本アプリからコンテンツは開けません。</string>
    <string name="ad_dummy" translatable="false">ここに宣伝を載せる</string>
    <string name="share" translatable="false">シェアする</string>
    <string name="app_id" translatable="false">325349090935088</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="mixi" translatable="false">Mixi</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="line" translatable="false">Line</string>
    <string name="twitter_consumer_key" translatable="false">td2AkdgzCiiRkw09ALSSAA</string>
    <string name="twitter_consumer_secret" translatable="false">4FSFANKII9XsaQiyzVEw766y0efPXxbZXvSclrjE</string>
    <string name="twitter_callback_url" translatable="false">gabu://twitter</string>
    <string name="mixi_app_id" translatable="false">40113</string>
    <string name="mixi_app_id_dev" translatable="false">40110</string>
    <string name="package_name_mixi" translatable="false">jp.mixi</string>
    <string name="package_name_line" translatable="false">jp.naver.line.android</string>
    <string name="mixi_consumer_key" translatable="false">45dbdc36bb2ef93d5c6d</string>
    <string name="mixi_consumer_key_dev" translatable="false">5c9af36436c78200ef1b</string>
</resources>
