<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/sendContentText"
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/facebookLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facebook"
                 android:layout_weight="1" />

            <ToggleButton
                android:id="@+id/facebookButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ToggleButton"
                 android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/twitterLabel"
                android:gravity="center"
                 android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/twitter"
                android:layout_weight="1" />

            <ToggleButton
                android:id="@+id/twitterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ToggleButton"
                 android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/mixiLabel"
                android:gravity="center"
				 android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mixi"
                 android:layout_weight="1"  />

            <ToggleButton
                android:id="@+id/mixiButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ToggleButton"
                 android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
